--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>XiaoZhi WebRTC - Start</title>
+    <link rel="icon" type="image/x-icon" href="static/favicon.ico">
     <script src="static/js/vue.min.js"></script>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             margin: 0;
             padding: 0;
-            background: #667eea;
-            color: #333;
+            background: linear-gradient(135deg, #e3f2fd 0%, #bbdefb 100%);
+            color: #000;
             height: 100vh;
             overflow: hidden;
         }
@@ -29,7 +30,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: #667eea;
+            background: linear-gradient(135deg, #e3f2fd 0%, #bbdefb 100%);
             transition: all 0.5s ease;
             position: relative;
             overflow: hidden;
@@ -48,7 +49,7 @@
         }
 
         .initial-title {
-            color: white;
+            color: #000;
             font-size: 3rem;
             font-weight: 300;
             margin-bottom: 0.5rem;
@@ -56,17 +57,18 @@
         }
 
         .initial-subtitle {
-            color: rgba(255, 255, 255, 0.9);
+            color: #333;
             font-size: 1.2rem;
             font-weight: 300;
             text-align: center;
         }
 
         .initial-card {
-            background: rgba(255, 255, 255, 0.15);
+            background: rgba(255, 255, 255, 0.8);
             border-radius: 16px;
             padding: 2rem;
-            border: 1px solid rgba(255, 255, 255, 0.3);
+            border: 1px solid rgba(33, 150, 243, 0.3);
+            box-shadow: 0 8px 32px rgba(33, 150, 243, 0.1);
         }
 
         .initial-input-section {
@@ -74,7 +76,7 @@
         }
 
         .input-label {
-            color: rgba(255, 255, 255, 0.9);
+            color: #000;
             font-size: 0.9rem;
             margin-bottom: 1rem;
             font-weight: 400;
@@ -83,9 +85,9 @@
         }
 
         .initial-input {
-            background: rgba(255, 255, 255, 0.2);
-            border: 2px solid rgba(255, 255, 255, 0.3);
-            color: white;
+            background: rgba(255, 255, 255, 0.9);
+            border: 2px solid rgba(33, 150, 243, 0.3);
+            color: #000;
             padding: 1rem 1.5rem;
             border-radius: 8px;
             font-size: 1rem;
@@ -95,13 +97,13 @@
         }
 
         .initial-input::placeholder {
-            color: rgba(255, 255, 255, 0.6);
+            color: rgba(0, 0, 0, 0.5);
         }
 
         .initial-input:focus {
             outline: none;
-            background: rgba(255, 255, 255, 0.3);
-            border-color: rgba(255, 255, 255, 0.5);
+            background: rgba(255, 255, 255, 1);
+            border-color: #2196f3;
         }
 
         .initial-input.error {
@@ -121,7 +123,7 @@
         }
 
         .preset-label {
-            color: rgba(255, 255, 255, 0.9);
+            color: #000;
             font-size: 0.9rem;
             margin-bottom: 1rem;
             font-weight: 400;
@@ -136,8 +138,8 @@
         }
 
         .mac-preset-tag {
-            background: rgba(255, 255, 255, 0.15);
-            border: 2px solid rgba(255, 255, 255, 0.3);
+            background: rgba(255, 255, 255, 0.7);
+            border: 2px solid rgba(33, 150, 243, 0.3);
             border-radius: 8px;
             padding: 1rem;
             cursor: pointer;
@@ -149,12 +151,12 @@
         }
 
         .mac-preset-tag:hover {
-            background: rgba(255, 255, 255, 0.25);
-            border-color: rgba(255, 255, 255, 0.5);
+            background: rgba(255, 255, 255, 0.9);
+            border-color: #2196f3;
         }
 
         .preset-name {
-            color: white;
+            color: #000;
             font-size: 0.9rem;
             font-weight: 500;
         }
@@ -164,9 +166,9 @@
         }
 
         .initial-control-button {
-            background: #5a67d8;
+            background: linear-gradient(135deg, #2196f3 0%, #1976d2 100%);
             color: white;
-            border: 2px solid rgba(255, 255, 255, 0.3);
+            border: 2px solid #1976d2;
             padding: 1rem 2rem;
             border-radius: 8px;
             font-size: 1.1rem;
@@ -178,11 +180,13 @@
             align-items: center;
             justify-content: center;
             gap: 0.5rem;
+            box-shadow: 0 4px 16px rgba(33, 150, 243, 0.3);
         }
 
         .initial-control-button:hover {
-            background: #4c63d2;
-            border-color: rgba(255, 255, 255, 0.4);
+            background: linear-gradient(135deg, #1976d2 0%, #1565c0 100%);
+            border-color: #1565c0;
+            box-shadow: 0 6px 20px rgba(33, 150, 243, 0.4);
         }
 
         .button-icon {
@@ -216,7 +220,7 @@
             <div class="initial-container">
                 <div class="initial-header">
                     <div class="initial-title">XiaoZhi WebRTC</div>
-                    <div class="initial-subtitle">小智 智能聊天助手</div>
+                    <!-- <div class="initial-subtitle">小智AI 你的情感伴侣</div> -->
                 </div>
 
                 <div class="initial-card">
@@ -243,9 +247,8 @@
                     </div>
 
                     <div class="initial-actions">
-                        <button class="initial-control-button" @click="goMain()" :disabled="macAddressError">
-                            <span class="button-icon">🎯</span>
-                            开始通话
+                        <button class="initial-control-button" @click="goChat()" :disabled="macAddressError">
+                            开始聊天
                         </button>
                     </div>
                 </div>
@@ -261,8 +264,8 @@
                 macAddressError: false,
             },
             methods: {
-                goMain() {
-                    window.location.href = `/main?mac=${this.macAddress}`;
+                goChat() {
+                    window.location.href = `/chatv2?mac=${this.macAddress}`;
                 },
                 validateMacAddress() {
                     this.formatMacAddress();
@@ -291,4 +294,3 @@
 </body>
 
 </html>
-
