--- a/src/chatv2.html
+++ b/src/chatv2.html
@@ -13,6 +13,8 @@
     <script src="static/js/pixi.js"></script>
     <!-- pixi-live2d-display  UMD 构建 -->
     <script src="static/js/cubism4.min.js"></script>
+    <!-- Live2D Manager -->
+    <script src="static/js/live2d.js"></script>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -452,14 +454,7 @@
                 speakingState: 'listening',
                 currentAudio: null,
                 isLoadingOffer: false,
-                live2dApp: null,
-                live2dModel: null,
-                isTalking: false,
-                mouthAnimationId: null,
-                mouthParam: 'ParamMouthOpenY',
-                audioContext: null,
-                analyser: null,
-                dataArray: null,
+                live2dManager: null,
                 // 拖拽相关状态
                 isDragging: false,
                 dragStart: { x: 0, y: 0 },
@@ -505,7 +500,8 @@
                     this.enumerateVideoInputs();
                     this.start();
                 });
-                this.initializeLive2D();
+                this.live2dManager = new Live2DManager();
+                this.live2dManager.initializeLive2D();
                 this.setInitialVideoPosition();
 
                 // 监听窗口大小变化
@@ -598,83 +594,6 @@
                 }
             },
             methods: {
-                animateMouth() {
-                  if (!this.isTalking) return;
-                  const internal = this.live2dModel.internalModel;
-                  if (internal && internal.coreModel) {
-                    const coreModel = internal.coreModel;
-
-                    // 获取音频分贝值
-                    let mouthValue = 0;
-                    if (this.analyser && this.dataArray) {
-                      this.analyser.getByteFrequencyData(this.dataArray);
-                      const average = this.dataArray.reduce((a, b) => a + b) / this.dataArray.length;
-                      // 将0-255的值转换为0-1的范围，并应用一些平滑处理
-                      mouthValue = Math.min(1, (average / 255) * 3);
-                    }
-                    // console.log("mouthValue", mouthValue)
-                    coreModel.setParameterValueById(this.mouthParam, mouthValue);
-                    coreModel.update();
-                  }
-                  this.mouthAnimationId = requestAnimationFrame(this.animateMouth);
-                },
-
-                // live2d 开始说话
-                startTalking() {
-                  if (this.isTalking || !this.live2dModel) return;
-
-                  // 确保音频分析器已初始化
-                  if (!this.analyser && this.remoteStream) {
-                    this.initializeAudioAnalyzer();
-                  }
-
-                  this.isTalking = true;
-                  this.animateMouth();
-                },
-
-                // live2d 停止说话
-                stopTalking() {
-                  this.isTalking = false;
-                  if (this.mouthAnimationId) {
-                    cancelAnimationFrame(this.mouthAnimationId);
-                    this.mouthAnimationId = null;
-                  }
-                  const internal = this.live2dModel.internalModel;
-                  if (internal && internal.coreModel) {
-                    const coreModel = internal.coreModel;
-                    coreModel.setParameterValueById(this.mouthParam, 0);
-                    coreModel.update();
-                  }
-                },
-
-                async initializeLive2D() {
-                    try {
-                        const canvas = document.getElementById('live2d-stage');
-
-                        // 供内部使用
-                        window.PIXI = PIXI;
-
-                        this.live2dApp = new PIXI.Application({
-                            view: canvas,
-                            height: window.innerHeight,
-                            width: window.innerWidth,
-                            resolution: window.devicePixelRatio,
-                            autoDensity: true,
-                            antialias: true,
-                            backgroundAlpha: 0,
-                        });
-
-                        // 加载 Live2D 模型
-                        this.live2dModel = await PIXI.live2d.Live2DModel.from('static/hiyori_pro_zh/runtime/hiyori_pro_t11.model3.json');
-                        this.live2dApp.stage.addChild(this.live2dModel);
-                        this.live2dModel.scale.set(0.35);
-                        this.live2dModel.x = (window.innerWidth - this.live2dModel.width) * 0.5;
-                        this.live2dModel.y = -50;
-
-                    } catch (err) {
-                        console.error('加载 Live2D 模型失败:', err);
-                    }
-                },
                 async initializeMedia() {
                     try {
                         // 优先使用 preferredFacingMode 选择前/后摄像头
@@ -919,8 +838,8 @@
                     this.pc.addEventListener('connectionstatechange', () => {
                         this.status = this.pc.connectionState;
                         if (this.pc.connectionState === 'connected') {
-                            this.stopTalking();
-                            this.startTalking()
+                            this.live2dManager.stopTalking();
+                            this.live2dManager.startTalking(this.remoteStream);
                             this.isConnected = true;
                             this.isLoadingOffer = false;
                             this.$nextTick(() => {
@@ -943,13 +862,11 @@
                     if (this.dataChannel) { this.dataChannel.close(); this.dataChannel = null; }
                     if (this.pc) { this.pc.close(); this.pc = null; }
 
-                    // 清理音频分析器
-                    if (this.audioContext) {
-                        this.audioContext.close();
-                        this.audioContext = null;
+                    // 清理 Live2D 管理器
+                    if (this.live2dManager) {
+                        this.live2dManager.destroy();
+                        this.live2dManager = null;
                     }
-                    this.analyser = null;
-                    this.dataArray = null;
                 },
                 endAndBack() {
                     this.stop();
@@ -968,33 +885,14 @@
                         remoteVideo.style.transform = 'none';
 
                         // 初始化音频分析器
-                        this.initializeAudioAnalyzer();
+                        if (this.live2dManager) {
+                            this.live2dManager.initializeAudioAnalyzer(this.remoteStream);
+                        }
                     }
                     if (this.localStream) {
                         localVideo.srcObject = this.localStream;
                         // 前置镜像，后置不镜像
                         localVideo.style.transform = this.preferredFacingMode === 'user' ? 'scaleX(-1)' : 'none';
-                    }
-                },
-                initializeAudioAnalyzer() {
-                    try {
-                        // 创建音频上下文和分析器
-                        this.audioContext = new (window.AudioContext || window.webkitAudioContext)();
-                        this.analyser = this.audioContext.createAnalyser();
-                        this.analyser.fftSize = 256;
-                        this.dataArray = new Uint8Array(this.analyser.frequencyBinCount);
-
-                        // 获取remoteVideo的音频轨道
-                        if (this.remoteStream) {
-                            const audioTracks = this.remoteStream.getAudioTracks();
-                            if (audioTracks.length > 0) {
-                                const source = this.audioContext.createMediaStreamSource(this.remoteStream);
-                                source.connect(this.analyser);
-                                console.log('音频分析器初始化成功');
-                            }
-                        }
-                    } catch (error) {
-                        console.error('初始化音频分析器失败:', error);
                     }
                 },
                 playMusicUrl(url) {
@@ -1042,9 +940,9 @@
                     let newVolume = currentVolume;
 
                     // 检测音频强度，如果过高可能导致回声
-                    if (this.analyser && this.dataArray) {
-                        this.analyser.getByteFrequencyData(this.dataArray);
-                        const average = this.dataArray.reduce((a, b) => a + b) / this.dataArray.length;
+                    if (this.live2dManager && this.live2dManager.analyser && this.live2dManager.dataArray) {
+                        this.live2dManager.analyser.getByteFrequencyData(this.live2dManager.dataArray);
+                        const average = this.live2dManager.dataArray.reduce((a, b) => a + b) / this.live2dManager.dataArray.length;
                         const normalizedLevel = average / 255;
 
                         // 如果音频强度过高，降低音量
