--- a/src/chatv2.html
+++ b/src/chatv2.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>XiaoZhi WebRTC - Main</title>
     <link rel="icon" type="image/x-icon" href="static/favicon.ico">
+    <link rel="manifest" href="/static/manifest.webmanifest">
+    <meta name="theme-color" content="#f1e6aa">
     <script src="static/js/vue.min.js"></script>
     <!-- Live2D Cubism Core -->
     <script src="static/js/live2dcubismcore.min.js"></script>
@@ -15,6 +17,7 @@
     <script src="static/js/cubism4.min.js"></script>
     <!-- Live2D Manager -->
     <script src="static/js/live2d.js"></script>
+
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
